# jommerce

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  README.md  manage.py  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.yaml  DOCUMENTATION.yaml  FEATURE_REQUEST.yaml  LOCALIZATION.yaml  bug_report.yaml  feature_request.yaml
accounts/migrations/: 0001_initial.py
demo/: settings.py  settings_django_admin.py  urls.py
dj/: __main__.py
dj/auth/: apps.py  conf.py  forms.py  middleware.py  models.py  settings.py  utils.py  views.py
dj/auth/migrations/: 0001_initial.py  0003_session_expire_date.py  0005_user_status.py
dj/auth/templates/auth/: login.html
dj/auth/validators/: __init__.py  password.py  username.py
dj/blog/: admin.py  apps.py
dj/blog/migrations/: 0001_initial.py  0002_category_post_category_and_more.py
dj/project/: asgi.py  urls.py  wsgi.py
dj/project/settings/: base.py  dev.py  test.py
dj/project_template/: .gitignore
dj/project_template/project_name/: wsgi.py
dj/project_template/project_name/settings/: dev.py  local.py  test.py
dj/project_template/requirements/: dev.txt
dj/project_template/templates/: base.html
djplus/: __main__.py  djplus.toml
djplus/auth/: apps.py  conf.py  forms.py  hashers.py  middleware.py  models.py  settings.py  urls.py  utils.py  validators.py  views.py
djplus/auth/migrations/: 0001_initial.py  0002_session.py  0002_session_data.py  0002_user_hash_type_user_salt.py  0003_session_expire_date.py  0003_user_status.py  0004_alter_session_user.py  0004_session_ip.py  0005_alter_session_id.py  0006_remove_user_status_remove_user_username.py  0007_remove_session_expire_date_remove_session_ip.py
djplus/auth/templates/auth/: signup.html
djplus/auth/validators/: __init__.py  password.py  username.py
djplus/blog/: admin.py  apps.py  models.py  urls.py  views.py
djplus/blog/migrations/: 0001_initial.py
djplus/project/: asgi.py  settings.py  urls.py  wsgi.py
djplus/project/settings/: base.py  dev.py
djplus/project/templates/: base.html
djplus/project_template/: .gitignore  manage.py
djplus/project_template/project_name/: asgi.py  settings.py  urls.py  wsgi.py
djplus/project_template/project_name/settings/: base.py  dev.py  prod.py  test.py
djplus/project_template/requirements/: base.txt  dev.txt
djplus/project_template/templates/: base.html
djplus/templates/: index.html
docs/: cli.rst  conf.py  custom_templates.rst  index.rst  installation.rst  instructions.rst  requirements.txt  settings.rst
docs/auth/: configuration.rst  index.rst  installation.rst  models.rst
docs/blog/: index.rst  installation.rst
jommerce/: __init__.py  __main__.py  apps.py  asgi.py  jommerce.toml  urls.py  utils.py  views.py  wsgi.py
jommerce/academy/: apps.py
jommerce/accounts/: admin.py  apps.py
jommerce/accounts/migrations/: 0001_initial.py
jommerce/admin/: apps.py
jommerce/auth/: __init__.py  admin.py  apps.py  checks.py  conf.py  hashers.py  managers.py  models.py  settings.py  tests.py  validators.py  views.py
jommerce/auth/migrations/: 0001_initial.py  0002_session_data.py  0003_session_expire_date.py  0004_session_ip.py  0005_user_status.py
jommerce/auth/validators/: __init__.py  password.py  username.py
jommerce/blog/: apps.py  managers.py  models.py
jommerce/blog/migrations/: 0002_category_post_category_and_more.py
jommerce/blog/templates/blog/: post.html
jommerce/contact/: apps.py
jommerce/forum/: apps.py
jommerce/payment/: apps.py
jommerce/project/: asgi.py  urls.py  wsgi.py
jommerce/project/settings/: base.py  dev.py  prod.py  test.py
jommerce/project_template/: .secrets  manage.py
jommerce/project_template/project_name/: asgi.py  local_settings.py  settings.py  urls.py  wsgi.py
jommerce/project_template/project_name/settings/: base.py  dev.py  prod.py
jommerce/project_template/requirements/: base.txt
jommerce/settings/: base.py  dev.py  prod.py
jommerce/shop/: apps.py
jommerce/storage/: apps.py
jommerce/templates/: base.html  coming-soon.html  maintenance.html
jommerce/templates/jommerce/: base.html
jommerce/templates/jommerce/pages/: home.html
jommerce/templates/pages/: home.html
jommerce/utils/: __init__.py  apps.py
jommerce/utils/models/: fields.py
jommerce/utils/urlpatterns/: coming_soon_mode.py  maintenance_mode.py
pyshem/: asgi.py  settings.py  urls.py  wsgi.py
pyshem/settings/: base.py  prod.py
requirements/: base.txt  dev.txt
tests/: test_fields.py  test_urls.py
tests/auth/: __init__.py  test_checks.py  test_hashers.py  test_managers.py  test_middleware.py  test_models.py  test_settings.py  test_urls.py  test_utils.py  test_validators.py  test_views.py
tests/blog/: test_managers.py  test_models.py  test_urls.py  test_views.py
tests/urls/: __init__.py  test_coming_soon.py  test_maintenance.py
tests/utils/: test_urlpatterns.py  test_urls.py
tests/utils/models/: test_fields.py
