[tool.poetry]
name = "djplus"
version = "2.1.0"
description = "A collection of Django apps"
license = "MIT"
authors = ["githashem <PersonalHashem@gmail.com>"]
readme = "README.md"
keywords = ["django", "dj", "extra", "contrib"]

repository = "https://github.com/githashem/djplus"

include = [
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "dj/project_template/*",
    "dj/templates/*",
    "dj/static/*",
    "dj/dj.toml",
]

classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
django-ipware = "^4.0.2"

[tool.poetry.extras]

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^3.2.4"
ipython = "^8.2.0"

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.0.1"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.scripts]
dj = "dj.__main__:main"
djonfig = "dj.__main__:generate_config_file"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
