[tool.poetry]
name = "jommerce"
version = "3.0.0"
description = "A collection of Django apps"
license = "MIT"
authors = ["githashem <PersonalHashem@gmail.com>"]
readme = "README.md"
keywords = ["django", "jommerce", "extra", "contrib"]


repository = "https://github.com/jommerce/jommerce"

include = [
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "jommerce/project_template/*",
    "jommerce/templates/*",
    "jommerce/static/*",
    "jommerce/jommerce.toml",
]

classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
django-ipware = "^4.0.2"

[tool.poetry.extras]

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^3.2.4"
ipython = "^8.2.0"
black = "^23.1.0"

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.0.1"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.scripts]
jommerce = "jommerce.__main__:main"
jonfig = "jommerce.__main__:generate_config_file"
jecret = "jommerce.__main__:get_random_secret_key"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = '''
jommerce/project_template/*
'''
