[metadata]
name = jommerce
version = attr: jommerce.__version__
author = Hashem
author_email = PersonalHashem@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

project_urls =
    Source = https://github.com/jommerce/jommerce
    Tracker = https://github.com/jommerce/jommerce/issues


[options]
packages = find:
python_requires = >=3.7
include_package_data = true
install_requires =
    Django == 3.2.8

[options.entry_points]
console_scripts =
    jommerce = jommerce.__main__:main
